--- a/Languages/default-en.xml
+++ b/Languages/default-en.xml
@@ -285,7 +285,7 @@
 			<button id="ID_LIBRARY_SEARCH_QUICK" text="Find"/>
 		</toolbar>
 		<toolbar name="CLibraryCollectionView.Virtual">
-			<button id="ID_LIBRARY_FOLDER_ENQUEUE" text="Play Full Album"/>
+			<button id="ID_LIBRARY_FOLDER_ENQUEUE" text="Play Album"/>
 			<separator/>
 			<button id="ID_LIBRARY_FOLDER_DOWNLOAD" text="Download All Files"/>
 			<rightAlign/>
@@ -441,7 +441,6 @@
 			<button id="ID_CHAT_EMOTICONS"/>
 			<separator/>
 			<button id="ID_CHAT_BROWSE" text="Browse User"/>
-			<!-- <button id="ID_CHAT_SEND_FILE" text="Send File"/> -->
 			<button id="ID_CHAT_PRIORITY" text="Grant Priority"/>
 			<separator/>
 			<button id="ID_CHAT_CONNECT" text="Connect" visible="false"/>
@@ -1207,14 +1206,14 @@
 			<item id="ID_LIBRARY_FOLDER_FILE_PROPERTIES" text="File _Properties"/>
 		</menu>
 		<menu name="CLibraryTree.Virtual.Basic">
-			<item id="ID_LIBRARY_FOLDER_ENQUEUE" text="_Play Album"/>
+			<item id="ID_LIBRARY_FOLDER_ENQUEUE" text="Play _Album"/>
 			<item id="ID_LIBRARY_FOLDER_DELETE" text="_Delete"/>
 			<separator/>
 			<item id="ID_LIBRARY_FOLDER_FILE_PROPERTIES" text="_File Properties"/>
-			<item id="ID_LIBRARY_FOLDER_PROPERTIES" text="_Album Properties"/>
+			<item id="ID_LIBRARY_FOLDER_PROPERTIES" text="Album _Properties"/>
 		</menu>
 		<menu name="CLibraryTree.Virtual">
-			<item id="ID_LIBRARY_FOLDER_ENQUEUE" text="_Play Album"/>
+			<item id="ID_LIBRARY_FOLDER_ENQUEUE" text="Play _Album"/>
 			<item id="ID_LIBRARY_FOLDER_DELETE" text="_Delete"/>
 			<separator/>
 			<item id="ID_LIBRARY_REBUILD" text="_Rebuild"/>
@@ -1223,7 +1222,7 @@
 			<item id="ID_LIBRARY_FOLDER_NEW" text="_New Folder..."/>
 			<separator/>
 			<item id="ID_LIBRARY_FOLDER_FILE_PROPERTIES" text="_File Properties"/>
-			<item id="ID_LIBRARY_FOLDER_PROPERTIES" text="_Album Properties"/>
+			<item id="ID_LIBRARY_FOLDER_PROPERTIES" text="Album _Properties"/>
 		</menu>
 		<!-- LIBRARY VIEWS -->
 		<menu name="CLibraryTileView">
@@ -1605,7 +1604,6 @@
 			<item id="ID_CHAT_DISCONNECT" text="_Disconnect"/>
 			<separator/>
 			<item id="ID_CHAT_BROWSE" text="_Browse User"/>
-			<!-- <item id="ID_CHAT_SEND_FILE" text="_Send File..."/> -->
 			<item id="ID_CHAT_PRIORITY" text="Grant _Priority"/>
 			<separator/>
 			<menu text="_Format">
@@ -3357,7 +3355,7 @@
 		<string id="20000" value="No URN available"/>
 		<string id="20001" value="Close"/>
 		<string id="20002" value="of (e.g. 1 of 10)"/>
-		<string id="20003" value="Changing interface direction requires restart. \nYou will need to start Shareaza manually. Exit now?"/>
+		<string id="20003" value="Changing language requires application restart.\nRestart now?"/>
 		<string id="20005" value="No"/>
 		<string id="20006" value="Yes"/>
 		<string id="20007" value="Auto"/>
@@ -3430,7 +3428,7 @@
 		<string id="20243" value="Continue"/>
 		<string id="20244" value="&amp;Remember my selection next time"/>
 		<string id="20245" value="New Folder"/>
-		<string id="20246" value="Command-line options:\n\n-tray : Disable startup splash screen and send application to tray\n-nosplash : Disable startup splash screen\n-nowarn : Disable alpha (daily builds) version warning dialog\n\nInterface modes:\n\n-basic : Start application in Basic interface mode\n-tabbed : Start application in Tabbed interface mode\n-windowed : Start application in Windowed interface mode\n\nSystem options:\n\n-RegServer : Register internal components for everyone\n-UnRegServer : Un-register internal components for everyone\n-RegServerPerUser : Register internal components for current user\n-UnRegServerPerUser : Un-register internal components for current user"/>
+		<string id="20246" value="Command-line options:\n\n-tray : Disable startup splash screen and send application to tray\n-nosplash : Disable startup splash screen\n-nowarn : Disable alpha (daily builds) version warning dialog\n-wait : Wait for other application instance exit\n\nInterface modes:\n\n-basic : Start application in Basic interface mode\n-tabbed : Start application in Tabbed interface mode\n-windowed : Start application in Windowed interface mode\n\nSystem options:\n\n-RegServer : Register internal components for everyone\n-UnRegServer : Un-register internal components for everyone\n-RegServerPerUser : Register internal components for current user\n-UnRegServerPerUser : Un-register internal components for current user"/>
 		<string id="20247" value="Failed to load metadata schemas. Please reinstall application."/>
 		<string id="20248" value="You selected %u files. Are you sure?"/>
 		<string id="20249" value="Off"/>
