--- a/Languages/default-fr.po
+++ b/Languages/default-fr.po
@@ -4,7 +4,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: ryo-oh-ki <ryo-oh-ki@narod.ru>\n"
 "POT-Creation-Date: 2010-09-07 18:03+0000\n"
 "PO-Revision-Date: \n"
-"Last-Translator: \n"
+"Last-Translator: ryo-oh-ki <ryo-oh-ki@narod.ru>\n"
 "Language-Team: Shareaza Development Team\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
@@ -779,7 +779,7 @@ msgstr "Mode _fenêtré"
 
 #: cmainwnd.tabbed;13;item;idc_import_downloads cmainwnd.windowed;21;item;idc_import_downloads
 msgid "_Import eMule partial downloads..."
-msgstr "_Importer des téléchargements incomplets eMule(.part)..."
+msgstr "_Importer des téléchargements incomplets eMule..."
 
 #: cmainwnd.tabbed;13;item;id_open_downloads_folder cmainwnd.windowed;21;item;id_open_downloads_folder
 msgid "_Open my folder of completed Downloads"
