--- a/Languages/default-en.pot
+++ b/Languages/default-en.pot
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Shareaza\n"
 "Report-Msgid-Bugs-To: ryo-oh-ki <ryo-oh-ki@narod.ru>\n"
-"POT-Creation-Date: 2010-11-01 15:03+0000\n"
+"POT-Creation-Date: 2010-11-04 08:03+0000\n"
 "PO-Revision-Date: \n"
 "Last-Translator: (translation author)\n"
 "Language-Team: Shareaza Development Team\n"
@@ -7169,15 +7169,19 @@ msgid "Handshake:"
 msgstr ""
 
 #: cdownloadssettingspage;control;1
-msgid "Save _Completed Files Here:"
+msgid "Save Completed Files Here"
 msgstr ""
 
 #: cdownloadssettingspage;control;4
-msgid "Store Temporary _Incomplete Files Here:"
+msgid "Scan every completed file with AntiVirus"
+msgstr ""
+
+#: cdownloadssettingspage;control;5
+msgid "Select AntiVirus:"
 msgstr ""
 
 #: cdownloadssettingspage;control;7
-msgid "_Number of Downloads:"
+msgid "Number of Downloads"
 msgstr ""
 
 #: cdownloadssettingspage;control;8
@@ -7193,7 +7197,7 @@ msgid "Transfers per File:"
 msgstr ""
 
 #: cdownloadssettingspage;control;17
-msgid "_Limits:"
+msgid "Limits"
 msgstr ""
 
 #: cdownloadssettingspage;control;18
@@ -7204,8 +7208,12 @@ msgstr ""
 msgid "Maximum Queue Length:"
 msgstr ""
 
-#: cdownloadssettingspage;control;23
+#: cdownloadssettingspage;control;22
 msgid "Only download and upload to networks which are connected."
+msgstr ""
+
+#: cdownloadssettingspage;control;23
+msgid "Store Temporary Incomplete Files Here"
 msgstr ""
 
 #: cuploadssettingspage;control;2
