--- a/Languages/default-en.pot
+++ b/Languages/default-en.pot
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Shareaza\n"
 "Report-Msgid-Bugs-To: ryo-oh-ki <ryo-oh-ki@narod.ru>\n"
-"POT-Creation-Date: 2010-11-15 14:55+0000\n"
+"POT-Creation-Date: 2010-11-16 14:53+0000\n"
 "PO-Revision-Date: \n"
 "Last-Translator: (translation author)\n"
 "Language-Team: Shareaza Development Team\n"
@@ -4761,7 +4761,7 @@ msgid "Closing connection to non-Gnutella2 neighbour %s."
 msgstr ""
 
 #: string;16191
-msgid "Received a packet from %s which excess query limits, ignoring."
+msgid "Received a packet from %s for %s which excess query limits, ignoring."
 msgstr ""
 
 #: string;16192
@@ -5561,7 +5561,11 @@ msgid "Gnutella Packets Lost"
 msgstr ""
 
 #: string;16528
-msgid "Gnutella Local Queries"
+msgid "Gnutella Incoming Queries"
+msgstr ""
+
+#: string;16529
+msgid "Gnutella Processed Queries"
 msgstr ""
 
 #: string;16532
