Fixed remote access settings page URL localization.
git-svn-id: https://svn.code.sf.net/p/shareaza/code/trunk@8875 3231ed4b-2112-0410-84e0-8c3944a40730

--- a/Languages/default-en.xml
+++ b/Languages/default-en.xml
@@ -3685,7 +3685,7 @@
 			<control caption="Shareaza Remote Access allows you to leave Shareaza running on your PC, and control it remotely using a web browser.  You will need to be able to accept incoming connections to use this feature (i.e. properly configured router, etc)."/>
 			<control caption="_Enable:"/>
 			<control caption="Enable Shareaza Remote Access:"/>
-			<control caption="URL"/>
+			<control/>
 			<control caption="_Credentials:"/>
 			<control caption="Choose a Username:"/>
 			<control/>
