--- a/Languages/default-ru.xml
+++ b/Languages/default-ru.xml
@@ -2913,6 +2913,7 @@
 		<string id="16157" value="Хост %s не является узлом, соединение закрывается."/>
 		<string id="16158" value="Gnutella2 соединение с хостом %s установлено успешно (%s)."/>
 		<string id="16159" value="Закрывается не Gnutella2 соединение с хостом %s."/>
+		<string id="16191" value="Полученный пакет от %s для %s превышает лимит запросов. Игнорируется."/>
 		<string id="16192" value="Хост %s отправил пакет чрезмерного размера, обрываю соединение."/>
 		<string id="16193" value="Хост %s отправил пакет с нулевой TTL, игнорирую."/>
 		<string id="16194" value="Хост %s отправил пакет c чрезмерным размером TTL, отклоняю (TTL=%i, Hops=%i)."/>
@@ -3112,7 +3113,8 @@
 		<string id="16525" value="Перенаправленные Gnutella пакеты"/>
 		<string id="16526" value="Сброшенные Gnutella пакеты"/>
 		<string id="16527" value="Потерянные Gnutella пакеты"/>
-		<string id="16528" value="Местные Gnutella запросы"/>
+		<string id="16528" value="Входящие Gnutella запросы"/>
+		<string id="16529" value="Обработанные Gnutella запросы"/>
 		<string id="16532" value="Общая TCP полоса пропускания приема"/>
 		<string id="16533" value="Общая TCP полоса пропускания посылок"/>
 		<string id="16534" value="Общая UDP полоса пропускания приема"/>
@@ -3665,7 +3667,7 @@
 			<control caption="Удаленный доступ к Shareaza позволит Вам оставить Shareaza запущенной и контролировать её удаленно из веб браузера.  Для использования этого Вам понадобится иметь возможность принимать входящие соединения."/>
 			<control caption="_Разрешение:"/>
 			<control caption="Разрешить удаленный доступ к Shareaza:"/>
-			<control caption="URL"/>
+			<control/>
 			<control caption="_Безопасность:"/>
 			<control caption="Введите имя:"/>
 			<control/>
