--- a/Languages/default-ru.po
+++ b/Languages/default-ru.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Shareaza\n"
 "Report-Msgid-Bugs-To: ryo-oh-ki <ryo-oh-ki@narod.ru>\n"
-"POT-Creation-Date: 2010-11-04 08:03+0000\n"
+"POT-Creation-Date: 2010-12-04 05:38+0000\n"
 "PO-Revision-Date: \n"
 "Last-Translator: ryo-oh-ki <ryo-oh-ki@narod.ru>\n"
 "Language-Team: Shareaza Development Team\n"
@@ -5433,6 +5433,10 @@ msgstr "Gnutella2 соединение с хостом %s установлено
 msgid "Closing connection to non-Gnutella2 neighbour %s."
 msgstr "Закрывается не Gnutella2 соединение с хостом %s."
 
+#: string;16191
+msgid "Received a packet from %s for %s which excess query limits, ignoring."
+msgstr "Полученный пакет от %s для %s превышает лимит запросов. Игнорируется."
+
 #: string;16192
 msgid "Neighbour %s forwarded a packet of excessive size, dropping connection."
 msgstr "Хост %s отправил пакет чрезмерного размера, обрываю соединение."
@@ -6341,8 +6345,12 @@ msgid "Gnutella Packets Lost"
 msgstr "Потерянные Gnutella пакеты"
 
 #: string;16528
-msgid "Gnutella Local Queries"
-msgstr "Местные Gnutella запросы"
+msgid "Gnutella Incoming Queries"
+msgstr "Входящие Gnutella запросы"
+
+#: string;16529
+msgid "Gnutella Processed Queries"
+msgstr "Обработанные Gnutella запросы"
 
 #: string;16532
 msgid "Total TCP Receive Bandwidth"
@@ -8205,10 +8213,6 @@ msgstr "_Разрешение:"
 #: cremotesettingspage;control;4
 msgid "Enable Shareaza Remote Access:"
 msgstr "Разрешить удаленный доступ к Shareaza:"
-
-#: cremotesettingspage;control;5 column;url
-msgid "URL"
-msgstr "URL"
 
 #: cremotesettingspage;control;6
 msgid "_Credentials:"
@@ -10174,6 +10178,10 @@ msgstr "Установка"
 #: column;value
 msgid "Value"
 msgstr "Значение"
+
+#: column;url
+msgid "URL"
+msgstr "URL"
 
 #: column;filename
 msgid "Filename"
